# python-llms

indicf5-app/: hindi.py  tts_tamil.py
sql-from-table/: .env  ai.py  config.py  main.py  pyproject.toml  seed.py
sql-from-table/client/: package.json  pnpm-lock.yaml
sql-from-table/client/src/: App.vue
sql-from-table/db/: init.py  queries.py  seed.py
sql-llm/: ds_config.json  interference.py  main.py  requirements.txt
tts-bark/: main.py
tts-bark/Generated_Udemy_Course/: 00 - Course Roadmap.txt
tts-bark/Generated_Udemy_Course/01 - Introduction _ Environment Setup/: 01 - Course Overview_ What You Will Build.txt  02 - Setting Up Python_ Node.js and VS Code _Windows_Linux_macOS_.txt  03 - Installing Git_ Creating GitHub Repo_ and Project Structure Overview.txt
tts-bark/Generated_Udemy_Course/02 - Frontend Basics - React File Upload/: 04 - Creating React App _ Folder Structure.txt  05 - Building the Resume Upload UI.txt  06 - Connecting Frontend to Backend via REST API.txt
tts-bark/Generated_Udemy_Course/03 - Backend Basics - FastAPI for Resume Upload/: 07 - FastAPI Project Setup and Basic Routing.txt  08 - Receiving and Saving Uploaded Resume Files.txt  09 - Handling File Types and Errors Gracefully.txt
tts-bark/Generated_Udemy_Course/04 - Resume Parsing _ Cleaning/: 10 - Extracting Text from PDF Files using PyPDF2.txt  11 - Regular Expressions for Cleaning and Structuring Text.txt  12 - Using Pandas to Organize Resume Data.txt
tts-bark/Generated_Udemy_Course/05 - AI-Powered Skill Extraction/: 13 - Introduction to OpenAI API and GPT Models.txt  (+1 more)
